# CS180_Graphics

./: CMakeLists.txt  README.md  glad.c  main.cpp  shader.h
glad/: glad.h
glfw_lib/: glfw3.lib
res/shaders/: shader.fs
